--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,9 @@ task clean(type: Delete) {
 
 ext {
     dagger_version = "2.25.2"
+
+    // unit testing
+    mockito_version = "2.25.0"
+    arch_core_testing_version = "2.1.0"
+    truth_version = "0.44"
 }
