Setup instrumentation test environment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "practice.mydagger.MyCustomTestRunner"
     }
     buildTypes {
         release {
@@ -49,4 +49,6 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger_version"
 }
